--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
-    "mongoose": "^7.1.0"
+    "mongoose": "^7.1.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
