--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,16 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.4",
     "formik": "^2.2.9",
+    "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.0-rc.1",
     "typescript": "^4.9.5",
