--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,13 @@
     "@types/react-dom": "^18.2.4",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.4",
     "formik": "^2.2.9",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
