--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
+    "googleapis": "^122.0.0",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.1.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
