--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "recharts": "^2.7.1",
+    "socket.io-client": "^4.7.3",
     "styled-components": "^6.0.0-rc.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
