--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-type-animation": "^3.2.0",
     "recharts": "^2.7.1",
     "socket.io-client": "^4.7.3",
     "styled-components": "^6.0.0-rc.1",
